--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>Luan Bernar Moreau Nunes</h1>
 <p> Eu quero estudar na Eliti pois sempre gostei de mexer com computadores, e tecnologia no geral, sempre achei muito massa a parte da programação porém nunca soube como começar, e por indicação de um amigo eu encontrei a Eliti, achei um projeto muito bacana e então me despertou a vontade novamente de aprender a programar</p>
 <img src="https://github.com/user-attachments/assets/b81f11a5-756f-4f0a-8122-06b2cc1b089e" /> 
+![Image](https://github.com/user-attachments/assets/7d6e2574-9ba5-4a3a-9a17-34897f240d0c)
 </body
 </html>
 
