--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <h1>Luan Bernar Moreau Nunes</h1>
 <p> Eu quero estudar na Eliti pois sempre gostei de mexer com computadores, e tecnologia no geral, sempre achei muito massa a parte da programação porém nunca soube como começar, e por indicação de um amigo eu encontrei a Eliti, achei um projeto muito bacana e então me despertou a vontade novamente de aprender a programar</p>
 <img src="imagens/bugatii.jpg" /> 
-</body
+</body>
 </html>
 ![Image](https://github.com/user-attachments/assets/06f0fc2c-9b87-42f6-9742-d2c369b185fc)
