--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1>Luan Bernar Moreau Nunes</h1>
 <p> Eu quero estudar na Eliti pois sempre gostei de mexer com computadores, e tecnologia no geral, sempre achei muito massa a parte da programação porém nunca soube como começar, e por indicação de um amigo eu encontrei a Eliti, achei um projeto muito bacana e então me despertou a vontade novamente de aprender a programar</p>
-<img src="imagens/bugatii.jpg" /> 
+<img src="bugatii.jpg" /> 
 </body>
 </html>
 
