--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
-  <head>
-        <title>Desafio-Eliti</title>
-  </head>
-  <body>
-        <h1>Luan Bernar Moreau Nunes</h1>
-        <p> Eu quero estudar na Eliti pois sempre gostei de mexer com computadores, e tecnologia no geral, sempre achei muito massa a parte da programação porém nunca soube como começar, e por indicação de um amigo eu encontrei a Eliti, achei um projeto muito bacana e então me despertou a vontade novamente de aprender a programar</p>
-        <img src="https://github.com/Snatss/Desafio-Eliti/bugatti.jpg">
-  </body>
+<head>
+<title>Desafio-Eliti</title>
+</head>
+<body>
+<h1>Luan Bernar Moreau Nunes</h1>
+<p> Eu quero estudar na Eliti pois sempre gostei de mexer com computadores, e tecnologia no geral, sempre achei muito massa a parte da programação porém nunca soube como começar, e por indicação de um amigo eu encontrei a Eliti, achei um projeto muito bacana e então me despertou a vontade novamente de aprender a programar</p>
+<img src="https://github.com/Snatss/Desafio-Eliti/blob/master/bugatti.jpg?raw=true" /> 
+</body>
 </html>
-
